# xstitch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP_FOR_AGENT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: adding-tools.md  architecture.md  cli-reference.md  search-design.md
tests/: conftest.py  test_robustness.py
tests/e2e/: E2E_TEST_PLAN.md  e2e_setup.sh  e2e_verify.py
tests/integration/: test_hook_handler.py  test_mcp_e2e.py  test_migration.py  test_storage.py  test_toml_mcp.py  test_tool_isolation.py  test_ttl_cleanup.py
tests/unit/: test_intelligence.py
tests/unit/cli/: test_commands.py
tests/unit/core/: test_store.py
tests/unit/diagnostics/: test_doctor.py  test_healthcheck.py
tests/unit/integrations/: test_discovery.py  test_enforcement.py  test_plugins.py  test_registry.py
tests/unit/mcp/: test_server.py  test_transport.py
tests/unit/search/: test_bm25.py  test_fuzzy.py  test_index.py  test_tokenizer.py
xstitch/: __init__.py  __main__.py  capture.py  cli.py  daemon.py  discovery.py  doctor.py  enforcement.py  global_setup.py  healthcheck.py  hooks.py  intelligence.py  launchd.py  log.py  mcp_server.py  models.py  relevance.py  store.py
xstitch/automation/: __init__.py  daemon.py  hooks.py  launchd.py
xstitch/core/: __init__.py  capture.py  log.py  models.py  store.py
xstitch/diagnostics/: __init__.py  doctor.py  healthcheck.py
xstitch/integrations/: __init__.py  base.py  discovery.py  enforcement.py  registry.py
xstitch/integrations/templates/: __init__.py
xstitch/integrations/tools/: __init__.py  aider.py  claude_code.py  codex.py  continue_dev.py  copilot.py  cursor.py  gemini.py  windsurf.py  zed.py
xstitch/mcp/: __init__.py  server.py  tools.py
xstitch/search/: __init__.py  bm25.py  embeddings.py  fuzzy.py  index.py  tokenizer.py
